# Opportunity

./: .gitattributes  NeuroChain.spec  NuroChainSetup.spec  OpportunityOS.spec  Qubo.spec  README.md  algorand_research_paper.md  architecture_diagrams.md  download_datasets.py  hackathon_winning_strategy.md  neurochain_demo.py  qubofinalprotype.rar
data/: keystore.json
dig_os/: .gitignore  README.md  install_script.sh
dig_os/ai_worker/: README.md  pyproject.toml  requirements.txt  setup.py
dig_os/ai_worker/dig_worker/: __init__.py  checkpoint.py  config.py  daemon_client.py  engine.py  fallback_metrics.py  models.py  scheduler.py  worker.py
dig_os/ai_worker/dig_worker/native/: __init__.py  (+1 more)
dig_os/ai_worker/scripts/: run_worker.py
dig_os/rust_daemon/: Cargo.toml  README.md
dig_os/rust_daemon/src/: api.rs  cgroups.rs  config.rs  main.rs  scheduler.rs  state.rs  telemetry.rs
dig_os/ui_shell/: README.md  main.py  requirements.txt
dig_os/ui_shell/core/: __init__.py  wallet.py
dig_os/ui_shell/dig_shell/: __init__.py  app.py  daemon_client.py  models.py  screens.py  theme.py  widgets.py
dig_os/ui_shell/ui/: __init__.py  threads.py
packaging/: build_windows_release.py  windows_installer.py
qubofinalprotype/qubofinalprotype/qubofinalprotype/: .env.example  README.md  exported_circuit.ipynb  launch_gui.bat  launch_gui.ps1  requirements.txt  run_gui.py  setup.py  start_gui.bat
release/: README.txt
release/test_install/: Launch Opportunity OS.bat
release/test_install/runtime/: opportunity_wallet_state.json
runtime/: opportunity_wallet_state.json
(+33 files in other folders)
